# ESP_HMI

./: .gitignore  CMakeLists.txt  README.md  ToDO.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/bsp/: CMakeLists.txt  bsp_io_expander.c  bsp_lcd.c  bsp_touch.c
components/bsp/include/: bsp.h
components/daq/: CMakeLists.txt  daq_manager.c  daq_tcp.c  daq_uart.c  daq_wifi.c
components/daq/include/: daq_manager.h  daq_types.h
components/hmi/: CMakeLists.txt  hmi_main.c
components/hmi/include/: hmi.h
components/hmi/screens/: screen_channel.c  screen_dashboard.c  screen_devices.c  screen_settings.c
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: daq_emulator_mqtt.py  daq_emulator_tcp.py
